trainingFight updated